full project with professionlly (file-folder name, path name etc)

--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@
  =================================================*/
 
            #banner{
-            background: url("website7/bannar.png");
+            background: url("../images/bannar.png");
             padding: 205px 0 173px;
             background-size: cover;
             background-position: right;
